--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "scripts": {
     "ava": "CONFIG=$(pwd)/webpack.ava.config.js NODE_ENV=AVA BABEL_DISABLE_CACHE=1 ava",
     "build": "webpack -d --config webpack.build.config",
+    "build:dev": "webpack -d --config webpack.dev.config",
     "eslint": "eslint src/*.js src/**/*.js src/**/*.jsx",
     "postinstall": "npm run build",
     "prepublish": "npm run test",
     "start": "npm run build && npm run server",
     "test": "npm run eslint && npm run ava",
-    "start:dev": "NODE_ENV=development && npm run webpack-dev-server",
+    "start:dev": "npm run build:dev && NODE_ENV=development && npm run webpack-dev-server",
     "server": "PORT=3000 node server.js",
-    "webpack-dev-server": "webpack-dev-server --history-api-fallback --hot --colors --port 3000 --inline"
+    "webpack-dev-server": "webpack-dev-server --config webpack.dev.config.js --history-api-fallback --hot --inline --colors --port 3000"
   },
   "dependencies": {
     "@quantumblack/javascript-standards": "0.0.5",
