--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "author": "Andy Shora <andy.shora@quantumblack.com>",
   "license": "Unlicensed",
   "devDependencies": {
+    "autoprefixer": "^6.7.2",
     "ava": "^0.17.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-object-assign": "^6.22.0",
@@ -70,6 +71,9 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-require-jsdoc": "^1.0.4",
     "ignore-styles": "^5.0.1",
+    "postcss-loader": "^1.2.2",
+    "postcss-smart-import": "^0.6.7",
+    "precss": "^1.4.0",
     "style-loader": "^0.13.1",
     "svg-react-loader": "^0.3.7",
     "webpack-dashboard": "^0.1.2",
