--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quantumblack/react-starter",
-  "version": "1.1.0",
-  "description": "An app seed for creating a React app, the QB way",
+  "version": "1.0.0",
+  "description": "Perlin Noise",
   "main": "server.js",
   "ava": {
     "files": [
@@ -38,6 +38,7 @@
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.11.1",
+    "chroma-js": "^1.2.2",
     "classnames": "^2.2.5",
     "compression": "^1.6.1",
     "connect-history-api-fallback": "^1.1.0",
@@ -45,6 +46,7 @@
     "express": "^4.14.0",
     "glob": "^7.1.1",
     "lodash": "^4.17.4",
+    "perlin-noise": "0.0.1",
     "postcss-cssnext": "^2.9.0",
     "postcss-foreach": "0.0.3",
     "postcss-map": "^0.8.0",
